syntax = "proto2";
package digital.upgrade.replication.raft;

option java_package = "digital.upgrade.replication.raft";
option java_outer_classname = "Raft";

message Term {
  required int64 number = 1;
}

message Index {
    required int64 mostSignificant = 1;
    required int64 leastSignificant = 2;
}

message Peer {
    required string uuid = 1;
    optional string publicKey = 2;
    optional string privateKey = 3;
}

message PersistentState {
    required string uuid = 1;
    required Term term = 2;
    optional Peer votedFor = 3;
    required Index committed = 4;
    required Index applied = 5;
}

// Invoked by the leader to replicate log entries.
message Entry {
  required Index commit = 1;
  // The term over which the election takes place
  required Term term = 2;
  required bytes command = 3;
}

message AppendRequest {
    required Term leaderTerm = 1;
    required Peer leader = 2;
    required Index previousIndex= 3;
    required Term previousTerm = 4;
    repeated Entry entries = 5;
    required Index leaderIndex = 6;
}

message AppendResult {
  required Term term = 1;
  required bool success = 2;
}

message VoteRequest {
    required Term candidateTerm = 1;
    required Peer candidate = 2;
    required Index lastLogIndex = 3;
    required Term lastLogTerm = 4;
}

message VoteResult {
    required Term voterTerm = 1;
    required bool voteGranted = 2;
}